Update of min ee to 1.8